logs/liquimigrate.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/liquimigrate'...
Listing './lib/python3.5/site-packages/liquimigrate/management'...
Listing './lib/python3.5/site-packages/liquimigrate/management/commands'...
Compiling './lib/python3.5/site-packages/liquimigrate/management/commands/liquibase.py'...
***   File "./lib/python3.5/site-packages/liquimigrate/management/commands/liquibase.py", line 126
    print "changelog file: %s" % (changelog_file,)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/liquimigrate/management/commands/makemigrations.py'...
***   File "./lib/python3.5/site-packages/liquimigrate/management/commands/makemigrations.py", line 29
    print "Making migrations cancelled."
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/liquimigrate/management/commands/migrate.py'...
***   File "./lib/python3.5/site-packages/liquimigrate/management/commands/migrate.py", line 29
    print "Migrate cancelled."
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/liquimigrate/management/commands/squashmigrations.py'...
***   File "./lib/python3.5/site-packages/liquimigrate/management/commands/squashmigrations.py", line 29
    print "Squashing migrations cancelled."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/liquimigrate/management/commands/syncdb.py'...
***   File "./lib/python3.5/site-packages/liquimigrate/management/commands/syncdb.py", line 24
    print "Sync cancelled."
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/liquimigrate/vendor'...
Listing './lib/python3.5/site-packages/liquimigrate/vendor/connectors'...
Listing './lib/python3.5/site-packages/liquimigrate/vendor/lib'...
Listing './lib/python3.5/site-packages/liquimigrate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
